# short

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  azure-pipelines.yml  readme.md  test.yml
.github/: dependabot.yml
.github/workflows/: linux.yml  markdown.yml  osx.yml  rust.yml
.releases_tpl/aur_short-git/: PKGBUILD
.releases_tpl/homebrew/: short.rb
cli/: Cargo.toml  assets.rs  build.rs
cli/src/: assets.rs  command.rs  helper.rs  init.rs  main.rs
cli/src/cfg/: mod.rs
cli/src/commands/: ls.rs  mod.rs
cli/src/settings/: mod.rs
cli/src/terminal/: emoji.rs
cli/tests/: add.rs  check.rs  deploy.rs  help.rs  init.rs  ls.rs
cli/tests/command/: add.rs  check.rs  demo.rs  deploy.rs  init.rs  ls.rs  mod.rs  use_test.rs
cli/tests/command/snapshots/: command_test__command__add__add.snap  command_test__command__init__init.snap
cli/tests/snapshots/: add__add.snap  init__add.snap  init__init.snap
d4d/: Cargo.toml  build.rs
d4d/src/: assets.rs  cloudformation.rs  gen_assets.rs  lib.rs  main.rs  resource.rs
d4d/src/assets/: validate_aws_template.yaml
d4d/src/assets/sam_test/: steps.sh  template.pkg.cf.yaml
d4d/src/assets/sam_test/hello-world/: app.js  package.json
d4d/src/assets/tpl_bucket_template/: steps.sh
d4d/src/assets/tpl_certificate/: certificate.pkg.yaml  steps.sh
d4d/src/assets/tpl_nested/: main.pkg.yaml  parent.yaml  steps.sh
d4d/src/assets/tpl_nested/child/: child.yaml
d4d/src/cloudformation/: mod.rs  stack.rs  template.rs  template_file.rs
d4d/src/env/: mod.rs
d4d/src/exec/: aws.rs  mod.rs  output.rs
d4d/src/exec/aws/: aws.rs  aws_command.rs  aws_output.rs  capabilities.rs  cli_aws.rs  mod.rs  parameter_overrides.rs  workflow.rs
d4d/src/lib/: error.rs  fs.rs  resource.rs  test.rs
d4d/src/project/: current.rs  global.rs  local.rs  mod.rs  provider.rs
d4d/src/project/snapshots/: d4d__project__current__tests__create_project_config_directory.snap  d4d__project__current__tests__load_project_current_file.snap  d4d__project__current__tests__save_project_current_file-2.snap  d4d__project__current__tests__save_project_current_file.snap  d4d__project__current__tests__serialize_projects.snap  d4d__project__global__tests__empty_read_global_file.snap  d4d__project__global__tests__empty_read_global_file.snap.new  d4d__project__global__tests__read_global_file.snap  d4d__project__global__tests__read_global_file.snap.new  d4d__project__local__tests__read_local_file.snap  d4d__project__tests__create_project_config_directory-2.snap  d4d__project__tests__create_project_config_directory-3.snap  d4d__project__tests__create_project_config_directory.snap  d4d__project__tests__create_project_config_file-2.snap  d4d__project__tests__create_project_config_file.snap  d4d__project__tests__load_project_config_file.snap  d4d__project__tests__serialize_projects.snap
d4d/src/projet/: mod.rs
d4d/src/projet/snapshots/: d4d__projet__tests__create_project_config_directory-2.snap  d4d__projet__tests__create_project_config_directory-3.snap  d4d__projet__tests__create_project_config_directory.snap
env/: Cargo.toml
env/src/: lib.rs
env/tests/: integration.rs
integration/starship/: short_prompt.sh
lib/: Cargo.toml
lib/src/: error.rs  lib.rs  resource.rs  result.rs  test.rs
lib/src/init_tpl/: 1_certificate.yaml
short/: Cargo.toml
short/src/: assets.rs
short/src/env/: mod.rs
short/src/exec/: mod.rs
short/src/project/: mod.rs
short_core/: Cargo.toml
short_core/src/: lib.rs
short_core/src/assets/tpl_nested/: main.yaml
short_core/src/assets/tpl_nested/child/example_child_lambda/: handler.js
short_core/src/assets/tpl_nested/example_parent_lambda/: handler.js
short_core/src/cfg/: env.rs  global.rs  mod.rs  new.rs  project.rs  setup.rs
short_core/src/cfg/file/: find.rs  mod.rs
short_core/src/cfg/global/: mod.rs  project.rs  setup.rs
short_core/src/cfg/local/: mod.rs  setup.rs  setup_env_group.rs  setup_provider.rs
short_core/src/cloudformation/: stack.rs  template_file.rs
short_core/src/command/: env_group.rs  file.rs  mod.rs
short_core/src/env/: mod.rs
short_core/src/exec/: mod.rs  output.rs
short_core/src/exec/aws/: aws_command.rs  aws_output.rs  parameter_overrides.rs  workflow.rs
short_core/src/project/: global.rs  local.rs  mod.rs  provider.rs
short_core/src/project/snapshots/: short__project__local__tests__read_local_file.snap  short_core__project__global__tests__empty_read_global_file.snap  short_core__project__global__tests__read_global_file.snap  short_core__project__local__tests__read_local_file.snap
short_env/: Cargo.toml
short_env/src/: lib.rs  read_dir.rs
short_env/tests/: integration.rs
short_utils/: Cargo.toml
short_utils/src/: asset.rs  assets.rs  error.rs  io.rs  lib.rs  result.rs  test.rs
short_utils/src/assets/: altered_aws_template.yaml
short_utils/src/integration_test/: environment.rs  mod.rs
src/: cloudformation.rs  d4d_error.rs  lib.rs  main.rs  path.rs  resource.rs
src/cfg/: error.rs  mod.rs  setup.rs
src/cfg/file/: find.rs  mod.rs
src/cfg/global/: mod.rs  project.rs  setup.rs
src/cfg/local/: mod.rs  setup.rs  setup_array_vars.rs  setup_vars.rs  (+1 more)
src/cli/: cfg.rs  error.rs  mod.rs  selected_envs.rs  settings.rs
src/env_file/: comment.rs  diff.rs  entry.rs  error.rs  iter.rs  mod.rs  read_dir.rs  recent.rs  sync.rs  var.rs
src/lib/: error.rs  fs.rs  io.rs  mod.rs  path.rs  result.rs  test.rs
src/run_file/: array_var.rs  env_group.rs  file.rs  mod.rs  var.rs
src/template/: mod.rs  registry.rs  template.rs
src/utils/: check_update.rs  colorize.rs  file_time.rs  find.rs  mod.rs
tests/: check_update.rs  dir.rs  edit.rs  env.rs  env_dir.rs  env_edit.rs  env_new.rs  env_pdir.rs  env_sync.rs  envs.rs  generate_empty.rs  generate_list.rs  generate_template.rs  help.rs  init.rs  ls.rs  new.rs  pdir.rs  rename.rs  run.rs  show.rs  sync.rs  test_utils.rs  use.rs  utils.rs  var.rs  vars.rs
utils/: Cargo.toml  build.rs
utils/src/: asset.rs  assets.rs  error.rs  fs.rs  io.rs  lib.rs  path.rs  resource.rs  result.rs  test.rs
utils/src/assets/: 0_other_conf.yaml
(+38 files in other folders)
