[package]
name = "short"
version = "0.3.4"
description = "A short cli project manager"
authors = ["Vincent Herlemont <vincentherl@leszeros.com>"]
edition = "2018"
readme = "readme.md"
homepage = "https://github.com/vincent-herlemont/short"
repository = "https://github.com/vincent-herlemont/short"
license = "MIT OR Apache-2.0"
keywords = ["env","prompts","deployment","tools","infrastructure"]
categories = ["command-line-utilities","development-tools::build-utils"]

[dependencies]
anyhow = "1.0.32"
thiserror = "1.0.19"
log = "0.4.8"
env_logger = "0.7.1"
open = "1.4.0"
tempdir = "0.3.7"
fs_extra = "1.2.0"
walkdir = "2.3.1"
serde_yaml ="0.8.13"
serde = { version = "1.0.112", features = ["derive","rc"] }
regex = "1.3.9"
clap = "2.33.2"
dirs = "3.0.0"
console = "0.12.0"
filetime = "0.2.12"
git2 = "0.13"
serde_json = "1.0.57"
heck = "0.3.1"
strum = "0.19.2"
strum_macros = "0.19.2"
colored = "2.0.0"
prettytable-rs = "^0.8"
reqwest = { version = "0.10.7", features = ["blocking"], optional = true }
versions = { version = "1.0.1", optional = true }
crossterm = "0.17.7"

[dev-dependencies]
predicates = "1.0.4"
cli_integration_test = "0.2.3"

[lib]
name = "short"
path = "src/lib.rs"
doc = true

[[bin]]
name = "sht"
path = "src/main.rs"
doc = false

[features]
default = [ "reqwest", "versions" ]