[package]
name = "short"
version = "0.3.6"
description = "A short cli project manager"
authors = ["Vincent Herlemont <vincentherl@leszeros.com>"]
edition = "2018"
readme = "readme.md"
homepage = "https://github.com/vincent-herlemont/short"
repository = "https://github.com/vincent-herlemont/short"
license = "MIT OR Apache-2.0"
keywords = ["env","prompts","deployment","tools","infrastructure"]
categories = ["command-line-utilities","development-tools::build-utils"]

[dependencies]
anyhow = "1.0.38"
thiserror = "1.0.23"
log = "0.4.8"
env_logger = "0.8.2"
open = "1.4.0"
tempdir = "0.3.7"
fs_extra = "1.2.0"
walkdir = "2.3.1"
serde = { version = "1.0.118", features = ["derive","rc"] }
serde_yaml ="0.8.14"
serde_json = "1.0.61"
regex = "1.4.3"
clap = "2.33.2"
dirs = "3.0.0"
console = "0.14.0"
filetime = "0.2.14"
git2 = "0.13.17"
heck = "0.3.2"
strum = "0.20.0"
strum_macros = "0.20.1"
colored = "2.0.0"
prettytable-rs = "^0.8"
reqwest = { version = "0.10.9", features = ["blocking"], optional = true }
versions = { version = "2.0.1", optional = true }
crossterm = "0.19.0"

[dev-dependencies]
predicates = "2.0.0"
cli_integration_test = "0.2.3"

[lib]
name = "short"
path = "src/lib.rs"
doc = true

[[bin]]
name = "sht"
path = "src/main.rs"
doc = false

[features]
default = [ "reqwest", "versions" ]