[package]
name = "short"
version = "0.0.2"
authors = ["Vincent Herlemont <vincentherl@leszeros.com>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
failure = "0.1.8"
exitfailure = "0.5.1"
log = "0.4.8"
env_logger = "0.7.1"
short_utils = { path = "../short_utils" }


[dev-dependencies]
walkdir = "2.3.1"
insta = "0.16.0"

[[bin]]
name = "short"
path = "src/main.rs"

[build-dependencies]
include_walk = "0.3.1"
