[package]
name = "short"
version = "0.0.2"
authors = ["Vincent Herlemont <vincentherl@leszeros.com>"]
edition = "2018"

[dependencies]
clap = "2.33.1"
dirs = "2.0.2"
anyhow = "1.0.28"
log = "0.4.8"
env_logger = "0.7.1"
console = "0.11.2"
fs_extra = "1.1.0"
short_utils = { path = "../short_utils" }
short_core = { path = "../short_core" }
short_env = { path = "../short_env" }

[dev-dependencies]
predicates = "1.0.4"

[[bin]]
name = "short"
path = "src/main.rs"

[build-dependencies]
include_walk = "0.3.1"
