[package]
name = "d4d"
version = "0.1.0"
authors = ["Vincent Herlemont <vincentherl@leszeros.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_yaml = "0.8.11"
utils = { path = "../utils" }

[build-dependencies]
include_walk = "0.2.2"