[package]
name = "d4d"
version = "0.1.0"
authors = ["Vincent Herlemont <vincentherl@leszeros.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.106", features = ["derive"] }
serde_yaml = "0.8.11"
dirs = "2.0.2"
which = "3.1.1"
voca_rs = "1.10.0"
utils = { path = "../utils" }
env = {path = "../env"}

[dev-dependencies]
walkdir = "2.3.1"
insta = "0.15.0"


[build-dependencies]
include_walk = "0.3.0"