[package]
name = "short_core"
version = "0.1.0"
authors = ["Vincent Herlemont <vincentherl@leszeros.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.28"
serde_yaml ="0.8.11"
fs_extra = "1.1.0"
predicates = "1.0.4"
serde = { version = "1.0.106", features = ["derive","rc"] }
short_env = { path = "../short_env" }
short_utils = { path = "../short_utils" }