[package]
name = "utils"
version = "0.0.1"
authors = ["Vincent Herlemont <vincentherl@leszeros.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempdir = "0.3"
serde = { version = "1.0.106", features = ["derive"] }
serde_yaml = "0.8.11"
walkdir = "2.3.1"
which = "3.1.1"
promptly = "0.3.0"

[build-dependencies]
include_walk = "0.3.0"
